--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -362,8 +362,8 @@
     },
     {
       "id": 424,
-      "name": "Identity Growth Pack",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - R Corp. 4th Pack Reindeer Hong Lu」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Renna del 4o Branco di R Corp. Hong Lu」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
     }
   ]
 }
