--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -298,12 +298,12 @@
     {
       "id": 412,
       "name": "Pacchetto Estrazione Mirata",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cedi la Carne per Prendere le loro Ossa BokGak」.\n\n· Biglietto per Decaestrazione x 4"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cedo la Carne per Strappare le Ossa BokGak」.\n\n· Biglietto per Decaestrazione x 4"
     },
     {
       "id": 413,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cedi la Carne per Prendere le loro Ossa BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cedo la Carne per Strappare le Ossa BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
     },
     {
       "id": 414,
