--- a/Italiano/IAPProduct-a1c7.json
+++ b/Italiano/IAPProduct-a1c7.json
@@ -2,7 +2,7 @@
   "dataList": [
     {
       "id": 106,
-      "name": "Pacchetto Allenamento Mensile Ⅰ",
+      "name": "Pacchetto Allenamento Mensile I",
       "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia x1690\n· Biglietto per Decaestrazione x2\n· Biglietto per Addestramento Identità IV x30"
     },
     {
