--- a/Italiano/SeasonTitle.json
+++ b/Italiano/SeasonTitle.json
@@ -55,6 +55,18 @@
     {
       "id": "season_filter_5",
       "content": "Stagione 5"
+    },
+    {
+      "id": "season_filter_6",
+      "content": "Stagione 6"
+    },
+    {
+      "id": "season_title_6",
+      "content": "Zàng Huā Yín"
+    },
+    {
+      "id": "season_title_6_EVENT",
+      "content": "Zàng Huā Yín [EVENTO]"
     }
   ]
 }
