--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -2,48 +2,48 @@
   "dataList": [
     {
       "id": 603,
-      "name": "Season 6 Commencement Lunacy Pack",
-      "desc": "A Seasonal offer that contains the following:\n\n· Lunacy x1300\n\n※ Please note that all Lunacy contained in this pack is Paid Lunacy."
+      "name": "Pacchetto Follia per l'Inizio della Stagione 6",
+      "desc": "Un'offerta Stagionale che offre i seguenti articoli:\n\n· Follia x1300\n\n※ Tutta la Follia di questo Pacchetto è Follia Pagata."
     },
     {
       "id": 604,
-      "name": "Season 6 Settler Supplies",
-      "desc": "Only available for purchase during Season 6. The pack contains the following:\n\n· Lunacy x5040\n· Decaextraction Ticket x3\n· Identity Training Ticket IV x60\n· Identity Training Ticket III x30\n· Thread x80\n· Season 6 Nominable Egoshard Crate x40"
+      "name": "Pacchetto Fornitura Stagione 6",
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per Addestramento Identità IV x60\n· Biglietto per Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 425,
-      "name": "Target Extraction Pack",
-      "desc": "You can obtain the following items from this 「New Target Extraction - Heishou Pack - Si Branch Rodion & Gregor」 release commemorative Pack.\n\n· Decaextraction Ticket x4"
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Ramo Si Rodion & Gregor」.\n\n· Biglietto per Decaestrazione x4"
     },
     {
       "id": 426,
-      "name": "Identity Growth Pack",
-      "desc": "You can obtain the following items from this 「New Target Extraction - Heishou Pack - Si Branch Rodion & Gregor」 release commemorative Pack.\n\n· Takeoff Module - ID Uptie x 1\n· Identity Training Ticket IV x 60\n· Identity Training Ticket III x 30"
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Ramo Si Rodion & Gregor」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· iglietto per Addestramento Identità x 30"
     },
     {
       "id": 154,
-      "name": "Weekly EXP Pack",
-      "desc": "A weekly offer that contains the following:\n\n· Identity Training Ticket IV x35\n· Identity Training Ticket III x25"
+      "name": "Pacchetto ESP Settimanale",
+      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x35\n· Biglietto per Addestramento Identità III x25"
     },
     {
       "id": 155,
-      "name": "Monthly EXP Pack I",
-      "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x80\n· Identity Training Ticket III x70"
+      "name": "Pacchetto ESP Mensile I",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x80\n· Biglietto per Addestramento Identità III x70"
     },
     {
       "id": 156,
-      "name": "Monthly EXP Pack II",
-      "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x160\n· Identity Training Ticket III x95"
+      "name": "Pacchetto ESP Mensile II",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x160\n· Biglietto per Addestramento Identità III x95"
     },
     {
       "id": 157,
-      "name": "Monthly EXP Pack III",
-      "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x325\n· Identity Training Ticket III x165"
+      "name": "Pacchetto ESP Mensile III",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x325\n· Biglietto per Addestramento Identità III x165"
     },
     {
       "id": 107,
-      "name": "Monthly Training Pack I",
-      "desc": "A monthly offer that contains the following:\n\n· Lunacy x1690\n· Decaextraction Ticket x2\n· Identity Training Ticket IV x35\n· Identity Training Ticket III x25"
+      "name": "Pacchetto Allenamento Mensile I",
+      "desc": "Un'offerta mensile che offre i seguenti articoli\n\n· Follia x1690\n· DBiglietto per Decaestrazione x2\n·Biglietto per Addestramento Identità IV x35\n· Biglietto per Addestramento Identità III x25"
     }
   ]
 }
