--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -3,12 +3,12 @@
     {
       "id": 603,
       "name": "Pacchetto Follia per l'Inizio della Stagione 6",
-      "desc": "Un'offerta Stagionale che offre i seguenti articoli:\n\n· Follia x1300\n\n※ Tutta la Follia di questo Pacchetto è Follia Pagata."
+      "desc": "Un'offerta Stagionale che offre i seguenti articoli:\n\n· Follia Pagata x1300\n\n"
     },
     {
       "id": 604,
       "name": "Pacchetto Fornitura Stagione 6",
-      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per Addestramento Identità IV x60\n· Biglietto per Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia Pagata x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per Addestramento Identità IV x60\n· Biglietto per Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 425,
@@ -18,7 +18,7 @@
     {
       "id": 426,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Ramo Si Rodion & Gregor」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· iglietto per Addestramento Identità x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Ramo Si Rodion & Gregor」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità x 30"
     },
     {
       "id": 154,
@@ -43,7 +43,17 @@
     {
       "id": 107,
       "name": "Pacchetto Allenamento Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli\n\n· Follia x1690\n· DBiglietto per Decaestrazione x2\n·Biglietto per Addestramento Identità IV x35\n· Biglietto per Addestramento Identità III x25"
+      "desc": "Un'offerta mensile che offre i seguenti articoli\n\n· Follia x1690\n· Biglietto per Decaestrazione x2\n·Biglietto per Addestramento Identità IV x35\n· Biglietto per Addestramento Identità III x25"
+    },
+    {
+      "id": 427,
+      "name": "Target Extraction Pack",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Capo Ramo Mao Faust」.\n\n· Biglietto per Decaestrazione x4"
+    },
+    {
+      "id": 428,
+      "name": "Identity Growth Pack",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Capo Ramo Mao Faust」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità x 30"
     }
   ]
 }
