--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -3,87 +3,87 @@
     {
       "id": 1,
       "name": "Follia",
-      "desc": "Contiene 140 Follia."
+      "desc": "Contiene 140 Follia Pagata."
     },
     {
       "id": 2,
       "name": "Mazzo di Follia",
-      "desc": "Contiene 588 Follia."
+      "desc": "Contiene 588 Follia Pagata."
     },
     {
       "id": 3,
       "name": "Bouquet di Follia",
-      "desc": "Contiene 2028 Follia."
+      "desc": "Contiene 2028 Follia Pagata."
     },
     {
       "id": 4,
       "name": "Cassa di Follia",
-      "desc": "Contiene 4294 Follia."
+      "desc": "Contiene 4294 Follia Pagata."
     },
     {
       "id": 5,
       "name": "Tumulo di Follia",
-      "desc": "Contiene 8206 Follia."
+      "desc": "Contiene 8206 Follia Pagata."
     },
     {
       "id": 6,
       "name": "Tesoretto di Follia",
-      "desc": "Contiene 16672 Follia."
+      "desc": "Contiene 16672 Follia Pagata."
     },
     {
       "id": 11,
       "name": "Follia",
-      "desc": "Contiene 70 Follia."
+      "desc": "Contiene 70 Follia Pagata."
     },
     {
       "id": 12,
       "name": "Mazzo di Follia",
-      "desc": "Contiene 294 Follia.\nRiceverai inoltre 31 Follia Gratuita come bonus."
+      "desc": "Contiene 294 Follia Pagata.\nInoltre riceverai 31 Follia Gratuita come bonus."
     },
     {
       "id": 13,
       "name": "Bouquet di Follia",
-      "desc": "Contiene 1014 Follia.\nRiceverai inoltre 156 Follia Gratuita come bonus."
+      "desc": "Contiene 1014 Follia Pagata.\nInoltre riceverai 156 Follia Gratuita come bonus."
     },
     {
       "id": 14,
       "name": "Cassa di Follia",
-      "desc": "Contiene 2147 Follia.\nRiceverai inoltre 323 Follia Gratuita come bonus."
+      "desc": "Contiene 2147 Follia Pagata.\nInoltre riceverai 323 Follia Gratuita come bonus."
     },
     {
       "id": 15,
       "name": "Tumulo di Follia",
-      "desc": "Contiene 4103 Follia.\nRiceverai inoltre 642 Follia Gratuita come bonus."
+      "desc": "Contiene 4103 Follia Pagata.\nInoltre riceverai 642 Follia Gratuita come bonus."
     },
     {
       "id": 16,
       "name": "Tesoretto di Follia",
-      "desc": "Contiene 8336 Follia.\nRiceverai inoltre 1349 Follia Gratuita come bonus."
+      "desc": "Contiene 8336 Follia Pagata.\nInoltre riceverai 1349 Follia Gratuita come bonus."
     },
     {
       "id": 21,
       "name": "Fornitura Mensile di Follia",
-      "desc": "Ottieni 650 Follia subito dopo l'acquisto.\nRicevi 65 Follia Gratuita per ogni giorno che accederai al gioco, per 30 giorni."
+      "desc": "Ottieni 650 Follia Pagata subito dopo l'acquisto.\nRicevi 65 Follia Gratuita per ogni giorno che accederai al gioco, per 30 giorni."
     },
     {
       "id": 22,
       "name": "Lotto Mensile di Follia",
-      "desc": "Ottieni 130 ollia subito dopo l'acquisto.\nRicevi 39 Follia Gratuita per ogni giorno che accederai al gioco, per 30 giorni"
+      "desc": "Ottieni 130 Follia Pagata subito dopo l'acquisto.\nRicevi 39 Follia Gratuita per ogni giorno che accederai al gioco, per 30 giorni"
     },
     {
       "id": 101,
       "name": "Pacchetto Estrazione Mensile",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia x650\n· Biglietto per Decaestrazione x1"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia Pagata x650\n· Biglietto per Decaestrazione x1"
     },
     {
       "id": 102,
       "name": "Pacchetto Allenamento Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia x1690\n· Biglietto per Decaestrazione x2\n· Biglietto di Aumento Livello II x1\n· Biglietto di Aumento Livello I x2\n· Biglietto per Addestramento Identità III x10\n· Biglietto per Addestramento Identità II x30"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia Pagata x1690\n· Biglietto per Decaestrazione x2\n· Biglietto di Aumento Livello II x1\n· Biglietto di Aumento Livello I x2\n· Biglietto per Addestramento Identità III x10\n· Biglietto per Addestramento Identità II x30"
     },
     {
       "id": 103,
       "name": "Pacchetto Allenamento Mensile II",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia x1690\n· Biglietto per Decaestrazione x2\n· Filo x120"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia Pagata x1690\n· Biglietto per Decaestrazione x2\n· Filo x120"
     },
     {
       "id": 104,
@@ -118,7 +118,7 @@
     {
       "id": 131,
       "name": "Pacchetto Estrazione Settimanale",
-      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Follia x273\n· Biglietto per Estrazione x5"
+      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Follia Pagata x273\n· Biglietto per Estrazione x5"
     },
     {
       "id": 133,
