--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -47,12 +47,12 @@
     },
     {
       "id": 427,
-      "name": "Target Extraction Pack",
+      "name": "Pacchetto Estrazione Mirata",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Capo Ramo Mao Faust」.\n\n· Biglietto per Decaestrazione x4"
     },
     {
       "id": 428,
-      "name": "Identity Growth Pack",
+      "name": "Pacchetto Crescita Identità",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Capo Ramo Mao Faust」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità x 30"
     }
   ]
