--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -353,7 +353,7 @@
     {
       "id": 422,
       "name": "Pacchetto Estrazione Mirata",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione E.G.O Mirata - Indicant's Trial Rodion」.\n\n· Biglietto per Decaestrazione x4"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione E.G.O Mirata - Processo della Strega Rodion」.\n\n· Biglietto per Decaestrazione x4"
     },
     {
       "id": 423,
