--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -53,7 +53,7 @@
     {
       "id": 428,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Capo Ramo Mao Faust」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Capo Ramo Mao Faust」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
     },
     {
       "id": 429,
@@ -63,7 +63,17 @@
     {
       "id": 430,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Family Hierarch Candidate Ishmael」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Family Hierarch Candidate Ishmael」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+    },
+    {
+      "id": 431,
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: Capo IIII Meursault & Soldato II Sinclair Del Pollice Est」.\n\n· Biglietto per Decaestrazione x4"
+    },
+    {
+      "id": 432,
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: Capo IIII Meursault & Soldato II Sinclair Del Pollice Est」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
     }
   ]
 }
