--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -74,6 +74,16 @@
       "id": 432,
       "name": "Pacchetto Crescita Identità",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: Capo IIII Meursault & Soldato II Sinclair Del Pollice Est」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+    },
+    {
+      "id": 433,
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: E.G.O di N Corp.::Proiettile Crudele Yi Sang」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+    },
+    {
+      "id": 434,
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: E.G.O di N Corp.::Proiettile Crudele Yi Sang」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
     }
   ]
 }
