--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -99,6 +99,16 @@
       "id": 437,
       "name": "Pacchetto Miglioria E.G.O",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 6a Notte di Valpurga」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
+    },
+    {
+      "id": 439,
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Tempo Ammazzatempo BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+    },
+    {
+      "id": 440,
+      "name": "Pacchetto Miglioria E.G.O",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Tempo Ammazzatempo BokGak」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
     }
   ]
 }
