--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -101,6 +101,11 @@
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 6a Notte di Valpurga」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
     },
     {
+      "id": 438,
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Tempo Ammazzatempo BokGak」.\n\n· Biglietto per Decaestrazione x 4"
+    },
+    {
       "id": 439,
       "name": "Pacchetto Crescita Identità",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Tempo Ammazzatempo BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
