--- a/Italiano/kr_settings-ui-donttranslate.json
+++ b/Italiano/kr_settings-ui-donttranslate.json
@@ -2,11 +2,11 @@
   "dataList": [
     {
       "id": "mainui_settings_game",
-      "content": "General"
+      "content": "Generali"
     },
     {
       "id": "mainui_settings_graphic",
-      "content": "Graphics"
+      "content": "Grafica"
     },
     {
       "id": "mainui_settings_sound",
@@ -14,11 +14,11 @@
     },
     {
       "id": "mainui_settings_notice",
-      "content": "Notifs"
+      "content": "Notifiche"
     },
     {
       "id": "mainui_settings_etc",
-      "content": "Misc."
+      "content": "Varie"
     },
     {
       "id": "mainui_settings_download",
@@ -26,23 +26,23 @@
     },
     {
       "id": "mainui_settings_download_complete",
-      "content": "Download Complete"
+      "content": "Download Completato"
     },
     {
       "id": "mainui_settings_video_resource",
-      "content": "Video Resources"
+      "content": "Risorse Video"
     },
     {
       "id": "mainui_settings_audio_resource",
-      "content": "Audio Resources"
+      "content": "Risorse Audio"
     },
     {
       "id": "mainui_settings_animation_resource",
-      "content": "Animation Resources"
+      "content": "Risorse Animazione"
     },
     {
       "id": "mainui_settings_ego_presentation",
-      "content": "E.G.O Animation"
+      "content": "Risorse E.G.O"
     },
     {
       "id": "mainui_settings_on",
@@ -54,23 +54,23 @@
     },
     {
       "id": "mainui_settings_play_once_per_day",
-      "content": "Once per Day"
+      "content": "Una Volta al Giorno"
     },
     {
       "id": "mainui_settings_resolution",
-      "content": "Resolution"
+      "content": "Risoluzione"
     },
     {
       "id": "mainui_settings_resolution_windowded",
-      "content": "Windowed"
+      "content": "Finestra"
     },
     {
       "id": "mainui_settings_resolution_fullscreen",
-      "content": "Fullscreen"
+      "content": "Schermo Intero"
     },
     {
       "id": "mainui_settings_texquality",
-      "content": "Texture Quality"
+      "content": "Qualità Texture"
     },
     {
       "id": "mainui_settings_resolution_warning",
@@ -82,15 +82,15 @@
     },
     {
       "id": "mainui_settings_low",
-      "content": "Low"
+      "content": "Bassa"
     },
     {
       "id": "mainui_settings_middle",
-      "content": "Medium"
+      "content": "Media"
     },
     {
       "id": "mainui_settings_high",
-      "content": "High"
+      "content": "Alta"
     },
     {
       "id": "mainui_settings_postprocessing",
@@ -114,7 +114,7 @@
     },
     {
       "id": "mainui_settings_clear",
-      "content": "Reset"
+      "content": "Ripristina"
     },
     {
       "id": "mainui_settings_clear_ask",
@@ -130,19 +130,19 @@
     },
     {
       "id": "mainui_settings_sound_sfx",
-      "content": "SFX"
+      "content": "Effetti Sonori"
     },
     {
       "id": "mainui_settings_sound_voice",
-      "content": "Voice"
+      "content": "Voci"
     },
     {
       "id": "mainui_settings_sound_battle_announcer",
-      "content": "Announcer"
+      "content": "Annunciatore"
     },
     {
       "id": "mainui_settings_notice_enkephalin_full",
-      "content": "Enkephalin Recovery"
+      "content": "Ripristino Encefalina"
     },
     {
       "id": "mainui_settings_notice_ads",
@@ -154,11 +154,11 @@
     },
     {
       "id": "mainui_settings_change_launguage",
-      "content": "Language"
+      "content": "Lingua"
     },
     {
       "id": "mainui_settings_change_launguage_ask",
-      "content": "Language changes apply after restarting the game."
+      "content": "I cambi alla lingua si applicano dopo aver riavviato il gioco. (SOLO LINGUE UFFICIALI: EN, KR, JP)"
     },
     {
       "id": "mainui_settings_faq_btn",
@@ -166,7 +166,7 @@
     },
     {
       "id": "connect_to_google_account",
-      "content": "Link with Google"
+      "content": "Collega con Google"
     },
     {
       "id": "connect_to_apple_account",
