--- a/Italiano/kr_settings-ui-donttranslate.json
+++ b/Italiano/kr_settings-ui-donttranslate.json
@@ -74,11 +74,11 @@
     },
     {
       "id": "mainui_settings_resolution_warning",
-      "content": "Higher resolutions may cause the device to heat and consume additional power."
+      "content": "Una risoluzione più alta può surriscaldare il dispositivo ed usare più batteria."
     },
     {
       "id": "mainui_settings_fps_warning",
-      "content": "Higher framerates may cause the device to heat and consume additional power."
+      "content": "Un framerate più alto può surriscaldare il dispositivo ed usare più batteria."
     },
     {
       "id": "mainui_settings_low",
@@ -118,15 +118,15 @@
     },
     {
       "id": "mainui_settings_clear_ask",
-      "content": "Reset everything to default?"
+      "content": "Ripristinare le opzioni di default?"
     },
     {
       "id": "mainui_settings_render_acceleration",
-      "content": "Accelerated Rendering"
+      "content": "Rendering Accelerato"
     },
     {
       "id": "mainui_settings_sound_master",
-      "content": "Master"
+      "content": "Volume Principale"
     },
     {
       "id": "mainui_settings_sound_sfx",
@@ -146,11 +146,11 @@
     },
     {
       "id": "mainui_settings_notice_ads",
-      "content": "Promotional Notices"
+      "content": "Notifiche Promozionali"
     },
     {
       "id": "mainui_settings_notice_ads_night",
-      "content": "Promotional Notices (Night)"
+      "content": "Notifiche Promozionali (Notte)"
     },
     {
       "id": "mainui_settings_change_launguage",
@@ -158,11 +158,11 @@
     },
     {
       "id": "mainui_settings_change_launguage_ask",
-      "content": "I cambi alla lingua si applicano dopo aver riavviato il gioco. (SOLO LINGUE UFFICIALI: EN, KR, JP)"
+      "content": "Si applica dopo aver riavviato il gioco. (SOLO LINGUE UFFICIALI: KR, EN, JP. Influenza la lingua in cui vengono mostrati gli asset di gioco.)"
     },
     {
       "id": "mainui_settings_faq_btn",
-      "content": "Customer Service"
+      "content": "Servizio Clienti"
     },
     {
       "id": "connect_to_google_account",
@@ -170,7 +170,7 @@
     },
     {
       "id": "connect_to_apple_account",
-      "content": "Link with Apple"
+      "content": "Collega con Apple"
     },
     {
       "id": "explain_sucession",
@@ -206,11 +206,11 @@
     },
     {
       "id": "account_secede",
-      "content": "Close Account"
+      "content": "Chiudi Account"
     },
     {
       "id": "connected_accounts",
-      "content": "Linked Accounts"
+      "content": "Account Collegati"
     },
     {
       "id": "mainui_settings_bloom",
@@ -230,11 +230,11 @@
     },
     {
       "id": "mainui_settings_fps_common",
-      "content": "Normal FPS"
+      "content": "FPS Menù"
     },
     {
       "id": "mainui_settings_fps_battle",
-      "content": "Combat FPS"
+      "content": "FPS in Combattimento"
     },
     {
       "id": "mainui_settings_renderingscale",
