--- a/Italiano/Ch8TextEffectSettings.json
+++ b/Italiano/Ch8TextEffectSettings.json
@@ -14,7 +14,7 @@
                         {
                             "texts": [
                                 {
-                                    "text": "And tomorrow, we'll play whatever big bro Baoyu's favorite game is. How's that for a plan, huh?",
+                                    "text": "Allora, domani, giocheremo al gioco preferito del fratellone Baoyu. Che te ne pare, eh?",
                                     "additionPosX": 0,
                                     "additionPoxY": 0,
                                     "additionPosZ": 0,
@@ -42,7 +42,7 @@
                         {
                             "texts": [
                                 {
-                                    "text": "But what do <i>you</i> want? Here's some homework for you—when we meet tomorrow...",
+                                    "text": "Ma cos'è che <i>tu</i> vuoi? Questi sono per te, dei compiti—per domani...",
                                     "additionPosX": 0,
                                     "additionPoxY": 0,
                                     "additionPosZ": 0,
@@ -70,7 +70,7 @@
                         {
                             "texts": [
                                 {
-                                    "text": "... you better have come up with something you like, okay?",
+                                    "text": "... faresti meglio a trovare qualcosa che ti piace, okay?",
                                     "additionPosX": 0,
                                     "additionPoxY": 0,
                                     "additionPosZ": 0,
