--- a/Italiano/ProjectGS.json
+++ b/Italiano/ProjectGS.json
@@ -2,15 +2,15 @@
   "dataList": [
     {
       "id": "project_gs_button_label_open_lesson_ui",
-      "content": "Select Class"
+      "content": "Seleziona Lezione"
     },
     {
       "id": "project_gs_button_label_progress_lesson",
-      "content": "Begin Class"
+      "content": "Inizia Lezione"
     },
     {
       "id": "project_gs_button_label_open_battle",
-      "content": "Midterm"
+      "content": "Parziale"
     },
     {
       "id": "project_gs_stats_wisdom",
@@ -38,27 +38,27 @@
     },
     {
       "id": "project_gs_condition",
-      "content": "Morale"
+      "content": "Motivazione"
     },
     {
       "id": "project_gs_day",
-      "content": "Day {0}"
+      "content": "Giorno {0}"
     },
     {
       "id": "project_gs_schedule_label",
-      "content": "Class Schedule"
+      "content": "Orario delle Lezioni"
     },
     {
       "id": "project_gs_desc_select_lesson",
-      "content": "Select a Class for this timeslot"
+      "content": "Seleziona una Lezione per quest'ora"
     },
     {
       "id": "project_gs_condition_highest",
-      "content": "Tip-top"
+      "content": "Alle Stelle"
     },
     {
       "id": "project_gs_condition_high",
-      "content": "Good"
+      "content": "Ottimo"
     },
     {
       "id": "project_gs_condition_medium",
@@ -66,15 +66,15 @@
     },
     {
       "id": "project_gs_condition_low",
-      "content": "Bad"
+      "content": "Basso"
     },
     {
       "id": "project_gs_condition_lowest",
-      "content": "Awful"
+      "content": "Sotto Terra"
     },
     {
       "id": "project_gs_title_grow_up",
-      "content": "Cultivation"
+      "content": "Coltivazione"
     },
     {
       "id": "project_gs_title_schedule",
@@ -82,15 +82,15 @@
     },
     {
       "id": "project_gs_lesson_level_1",
-      "content": "Novice"
+      "content": "Novizio"
     },
     {
       "id": "project_gs_lesson_level_2",
-      "content": "Expert"
+      "content": "Esperto"
     },
     {
       "id": "project_gs_lesson_level_3",
-      "content": "Master"
+      "content": "Maestro"
     },
     {
       "id": "project_gs_jia_xichun_name",
@@ -102,7 +102,7 @@
     },
     {
       "id": "project_gs_exp",
-      "content": "EXP"
+      "content": "ESP"
     },
     {
       "id": "project_gs_combo",
@@ -110,7 +110,7 @@
     },
     {
       "id": "project_gs_fixed_lesson",
-      "content": "Mandatory Class"
+      "content": "Lezione Obbligatoria"
     },
     {
       "id": "project_gs_lesson_result_desc_1_critical_success",
@@ -354,131 +354,131 @@
     },
     {
       "id": "project_gs_combo_desc_wisdom_up",
-      "content": "[Stat gain: Zhi +{0}]"
+      "content": "[Stat. aumentata: Zhi +{0}]"
     },
     {
       "id": "project_gs_combo_desc_wisdom_down",
-      "content": "[Stat loss: Zhi -{0}]"
+      "content": "[Stat. persa: Zhi -{0}]"
     },
     {
       "id": "project_gs_combo_desc_courage_up",
-      "content": "[Stat gain: Yong +{0}]"
+      "content": "[Stat. aumentata: Yong +{0}]"
     },
     {
       "id": "project_gs_combo_desc_courage_down",
-      "content": "[Stat loss: Yong -{0}]"
+      "content": "[Stat. persa: Yong -{0}]"
     },
     {
       "id": "project_gs_combo_desc_benevolence_up",
-      "content": "[Stat gain: Ren +{0}]"
+      "content": "[Stat. aumentata: Ren +{0}]"
     },
     {
       "id": "project_gs_combo_desc_benevolence_down",
-      "content": "[Stat loss: Ren -{0}]"
+      "content": "[Stat. persa: Ren -{0}]"
     },
     {
       "id": "project_gs_combo_desc_all_stats_up",
-      "content": "[All Stats +{0}]"
+      "content": "[Tutte le Stat. +{0}]"
     },
     {
       "id": "project_gs_combo_desc_all_stats_down",
-      "content": "[All Stats -{0}]"
+      "content": "[Tutte le Stat. -{0}]"
     },
     {
       "id": "project_gs_combo_desc_condition_up",
-      "content": "[{0} Morale restored]"
+      "content": "[{0} Motivazione ottenuta]"
     },
     {
       "id": "project_gs_combo_desc_condition_down",
-      "content": "[{0} Morale lost]"
+      "content": "[{0} Motivazione persa]"
     },
     {
       "id": "project_gs_combo_desc_lesson_critical_success",
-      "content": "[Huge Success in Class]"
+      "content": "[La Lezione ha Successo Aumentato]"
     },
     {
       "id": "project_gs_combo_desc_next_lesson_critical_success",
-      "content": "[Huge Success in next Class]"
+      "content": "[La Lezione successiva ha Successo Aumentato]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_wisdom_up",
-      "content": "[+{0}% to Zhi Stat gained from Class]"
+      "content": "[+{0}% alla Stat. Zhi ottenuta dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_wisdom_down",
-      "content": "[-{0}% to Zhi Stat gained from Class]"
+      "content": "[-{0}% alla Stat. Zhi ottenuta dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_courage_up",
-      "content": "[+{0}% to Yong Stat gained from Class]"
+      "content": "[+{0}% alla Stat. Yong ottenuta dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_courage_down",
-      "content": "[-{0}% to Yong Stat gained from Class]"
+      "content": "[-{0}% alla Stat. Yong ottenuta dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_benevolence_up",
-      "content": "[+{0}% to Ren Stat gained from Class]"
+      "content": "[+{0}% alla Stat. Ren ottenuta dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_benevolence_down",
-      "content": "[-{0}% to Ren Stat gained from Class]"
+      "content": "[-{0}% alla Stat. Ren ottenuta dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_all_up",
-      "content": "[+{0}% to all Stats gained from Class]"
+      "content": "[+{0}% a tutte le Stat. ottenute dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_stats_result_ratio_all_down",
-      "content": "[-{0}% to all Stats gained from Class]"
+      "content": "[-{0}% a tutte le Stat. ottenute dalla Lezione]"
     },
     {
       "id": "project_gs_combo_desc_title",
-      "content": "Combo Combinations"
+      "content": "Combinazione Lezioni"
     },
     {
       "id": "project_gs_restart",
-      "content": "Restart"
+      "content": "Ricomincia"
     },
     {
       "id": "project_gs_ask_to_restart",
-      "content": "Restart from Day 1?"
+      "content": "Ricominciare dal Giorno 1?"
     },
     {
       "id": "project_gs_finish_to_grow_up",
-      "content": "Class Complete"
+      "content": "Lezione Completata"
     },
     {
       "id": "project_gs_combo_desc_lesson_success_rate_up",
-      "content": "[Class Success Rate +{0}%]"
+      "content": "[Rateo di Successo della Lezione +{0}%]"
     },
     {
       "id": "project_gs_combo_desc_lesson_success_rate_down",
-      "content": "[Class Success Rate -{0}%]"
+      "content": "[Rateo di Successo della Lezione -{0}%]"
     },
     {
       "id": "project_gs_combo_desc_lesson_success_rate_changed",
-      "content": "[Class Success Rate Changed]"
+      "content": "Rateo di Successo della Lezione Cambiato]"
     },
     {
       "id": "project_gs_combo_desc_lesson_critical_success_changed",
-      "content": "- Huge Success : {0}%"
+      "content": "- Successo Critico : {0}%"
     },
     {
       "id": "project_gs_combo_desc_lesson_success_changed",
-      "content": "- Success : {0}%"
+      "content": "- Successo : {0}%"
     },
     {
       "id": "project_gs_combo_desc_lesson_normal_changed",
-      "content": "- Average : {0}%"
+      "content": "- Mediocre : {0}%"
     },
     {
       "id": "project_gs_combo_desc_lesson_failure_changed",
-      "content": "- Failure : {0}%"
+      "content": "- Fallimento : {0}%"
     },
     {
       "id": "project_gs_combo_desc_lesson_critical_failure_changed",
-      "content": "- Huge Failure : {0}%"
+      "content": "- Fallimento Critico : {0}%"
     },
     {
       "id": "project_gs_lesson_level_up_title",
@@ -486,7 +486,7 @@
     },
     {
       "id": "project_gs_notice_unable_to_release_fixed_lesson",
-      "content": "This is a mandatory class."
+      "content": "Questa lezione è obbligatoria."
     },
     {
       "id": "project_gs_combo_text_only_jia_xichun",
@@ -498,47 +498,47 @@
     },
     {
       "id": "project_gs_ask_to_start_lesson",
-      "content": "Resume Classes?"
+      "content": "Riprendere le Lezioni?"
     },
     {
       "id": "project_gs_do_not_see_ask_to_start_lesson_popup",
-      "content": "Don't show this message again"
+      "content": "Non mostrare più questo messaggio"
     },
     {
       "id": "project_gs_stats_saved",
-      "content": "Growth History"
+      "content": "Progresso Crescita"
     },
     {
       "id": "project_gs_progress_label",
-      "content": "Class Progress"
+      "content": "Progresso Lezioni"
     },
     {
       "id": "project_gs_ask_move_to_main",
-      "content": "Save your Class progress and\nreturn to the Main Menu?"
+      "content": "Salvare i progressi e\ntornare al Menù Principale?"
     },
     {
       "id": "project_gs_exit_title",
-      "content": "Classes Completed"
+      "content": "Lezioni Completate"
     },
     {
       "id": "project_gs_re_enter_warning",
-      "content": "The thirty days of Classes are over.\nRe-entering this node will reset your Class progresses, and starting the final Class will overwrite your previous run's Cultivation history.\nEnter anyway?"
+      "content": "I 30 giorni di Lezioni sono terminati.\nRientrare in questo nodo resetterà i tuoi progressi nelle Lezioni e cominciare l'ultima Lezione sovrascriverà i dati della Coltivazione precedente.\nEntrare lo stesso?"
     },
     {
       "id": "project_gs_check_growth",
-      "content": "View Growth"
+      "content": "Vedi Crescita"
     },
     {
       "id": "project_gs_growth_desc",
-      "content": "Jia Xichun has grown!\n(Zhi : {0}, Yong : {1}, Ren : {2})\nSinclair has grown!\n(Zhi : {4}, Yong : {5}, Ren : {6})"
+      "content": "Jia Xichun è miglirata!\n(Zhi : {0}, Yong : {1}, Ren : {2})\nSinclair è migliorato!\n(Zhi : {4}, Yong : {5}, Ren : {6})"
     },
     {
       "id": "project_gs_growth_result_popup_lessons",
-      "content": "Classes Taken"
+      "content": "Lezioni Frequentate"
     },
     {
       "id": "project_gs_growth_result_popup_check_stats",
-      "content": "View Jia Xichun's Info"
+      "content": "Vedi le Info di Jia Xichun"
     },
     {
       "id": "project_gs_ask_to_start_lesson_with_warning",
@@ -546,7 +546,7 @@
     },
     {
       "id": "project_gs_alarm_lesson_level_up",
-      "content": "Class [{0}] leveled up to \"{1}\"."
+      "content": "La Lezione [{0}] è migliorata a \"{1}\"."
     }
   ]
 }
