--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -88,17 +88,17 @@
     {
       "id": 435,
       "name": "Pacchetto Estrazione Mirata",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 6a Notte di Valpurga」.\n\n· Biglietto per Decaestrazione x 4"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Sesta Notte di Valpurga」.\n\n· Biglietto per Decaestrazione x 4"
     },
     {
       "id": 436,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 6a Notte di Valpurga」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Sesta Notte di Valpurga」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
     },
     {
       "id": 437,
       "name": "Pacchetto Miglioria E.G.O",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 6a Notte di Valpurga」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Sesta Notte di Valpurga」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
     },
     {
       "id": 438,
