--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -268,17 +268,17 @@
     {
       "id": 406,
       "name": "Pacchetto Estrazione Mirata",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 5a Notte di Valpurga」.\n\n· Biglietto per Decaestrazione x 4"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Quinta Notte di Valpurga」.\n\n· Biglietto per Decaestrazione x 4"
     },
     {
       "id": 407,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 5a Notte di Valpurga」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Quinta Notte di Valpurga」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
     },
     {
       "id": 408,
       "name": "Pacchetto Miglioria E.G.O",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La 5a Notte di Valpurga」.\n\n· Modulo Lancio - Intreccio E.G.O [HE] x 1"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Quinta Notte di Valpurga」.\n\n· Modulo Lancio - Intreccio E.G.O [HE] x 1"
     },
     {
       "id": 409,
