--- a/Italiano/ProjectGSComboName.json
+++ b/Italiano/ProjectGSComboName.json
@@ -42,7 +42,7 @@
     },
     {
       "id": 11,
-      "content": "Shall Never Surrender"
+      "content": "Can be Destroyed but not Defeated"
     },
     {
       "id": 12,
