--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -144,6 +144,26 @@
       "id": 446,
       "name": "Pacchetto Crescita Identità",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: E.G.O della N Corp.::Disprezzo, Timore Ryōshū」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+    },
+    {
+      "id": 447,
+      "name": "Target Extraction Pack",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cap. 8.5: EX - Pellegrinaggio della Compassione」.\n\n· Biglietto per Decaestrazione x 4"
+    },
+    {
+      "id": 448,
+      "name": "E.G.O [WAW]\nUpgrade Pack",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cap. 8.5: EX - Pellegrinaggio della Compassione」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
+    },
+    {
+      "id": 449,
+      "name": "E.G.O [HE]\nUpgrade Pack",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cap. 8.5: EX - Pellegrinaggio della Compassione」.\n\n· Modulo Lancio - Intreccio E.G.O [HE] x 1"
+    },
+    {
+      "id": 209,
+      "name": "Amiya Announcer Pack",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per la Collaborazione Limbus Company X Arknights.\n\n· Annunciatrice Amiya\n· Biglietto per Decaestrazione x2"
     }
   ]
 }
