--- a/Italiano/SeasonTitle.json
+++ b/Italiano/SeasonTitle.json
@@ -67,6 +67,10 @@
     {
       "id": "season_title_6_EVENT",
       "content": "Zàng Huā Yín [EVENTO]"
+    },
+    {
+      "id": "season_8000_collaboration",
+      "content": "COLLABORAZIONE - LIMITATA"
     }
   ]
 }
