--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -147,22 +147,22 @@
     },
     {
       "id": 447,
-      "name": "Target Extraction Pack",
+      "name": "Pacchetto Estrazione Mirata",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cap. 8.5: EX - Pellegrinaggio della Compassione」.\n\n· Biglietto per Decaestrazione x 4"
     },
     {
       "id": 448,
-      "name": "E.G.O [WAW]\nUpgrade Pack",
+      "name": "Pacchetto Miglioria\nE.G.O [WAW]",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cap. 8.5: EX - Pellegrinaggio della Compassione」.\n\n· Modulo Lancio - Intreccio E.G.O [WAW] x 1"
     },
     {
       "id": 449,
-      "name": "E.G.O [HE]\nUpgrade Pack",
+      "name": "Pacchetto Miglioria\nE.G.O [HE]",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cap. 8.5: EX - Pellegrinaggio della Compassione」.\n\n· Modulo Lancio - Intreccio E.G.O [HE] x 1"
     },
     {
       "id": 209,
-      "name": "Amiya Announcer Pack",
+      "name": "Pacchetto Annunciatore Amiya",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per la Collaborazione Limbus Company X Arknights.\n\n· Annunciatrice Amiya\n· Biglietto per Decaestrazione x2"
     }
   ]
