--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -179,6 +179,11 @@
       "id": 208,
       "name": "Full Moon 2025\nCommemorative\nComplete Pack",
       "desc": "A limited Full Moon 2025 Campaign Commemorative Pack. Contains the following items:\n\n· Decaextraction Ticket x4\n· Takeoff Module - ID Uptie x1\n· Takeoff Module - E.G.O Spinning [WAW] x1\n· Identity Training Ticket IV x140\n· Threads x100\n\n※ Using the Takeoff Module - ID Uptie raises the selected Identity's Uptie Tier to 4.\n\n※ Using the Takeoff Module - E.G.O Spinning [WAW] raises the selected E.G.O's Threadspinning tier to 4. (Usable only on E.G.Os WAW Level or lower)"
+    },
+    {
+      "id": 450,
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Shi Est Sezione 3 Faust」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
     }
   ]
 }
