--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -193,7 +193,7 @@
     {
       "id": 999,
       "name": "Limbus Pass",
-      "desc": "Migliora il Battle Pass nel Limbus Pass.\n\n※ Valido solo per il Pass della Stagione in corso."
+      "desc": "Migliora il Pass Battaglia nel Limbus Pass.\n\n※ Valido solo per il Pass della Stagione in corso."
     },
     {
       "id": 124,
