Correzioni + Inizio Canto 3

--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -162,7 +162,7 @@
     },
     {
       "id": 209,
-      "name": "Pacchetto Annunciatore Amiya",
+      "name": "Pacchetto Annunciatore: Amiya",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per la Collaborazione Limbus Company X Arknights.\n\n· Annunciatrice Amiya\n· Biglietto per Decaestrazione x2"
     },
     {
