--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -343,7 +343,7 @@
     {
       "id": 205,
       "name": "Pacchetto 2o Anniversario",
-      "desc": "Un pacchetto per celebrare il 2o Anniversario.\n\n· Accesso immediato a Vergilius - Annunciatore\n· 3★ Biglietto per Decaestrazione Garantita x1\n· Biglietto di Lancio Identità ver.2 x1\n\n※ Se hai già ottenuto Vergilius - Annunciatore, ottieni x50 Cassa di Filo.\n※ Il Biglietto di Lancio Identità ver.2 porta il livello di un'Identità al liv. 50, ed il Grado Legame al liv.4."
+      "desc": "Un pacchetto per celebrare il 2o Anniversario.\n\n· Accesso immediato a Annunciatore: Vergilius\n· 3★ Biglietto per Decaestrazione Garantita x1\n· Biglietto di Lancio Identità ver.2 x1\n\n※ Se hai già ottenuto Vergilius - Annunciatore, ottieni x50 Cassa di Filo.\n※ Il Biglietto di Lancio Identità ver.2 porta il livello di un'Identità al liv. 50, ed il Grado Legame al liv.4."
     },
     {
       "id": 421,
