--- a/Italiano/SeasonTitle.json
+++ b/Italiano/SeasonTitle.json
@@ -71,6 +71,10 @@
     {
       "id": "season_8000_collaboration",
       "content": "COLLABORAZIONE - LIMITATA"
+    },
+    {
+      "id": "season_8000_collaboration_filter_title",
+      "content": "SOLO COLLABORAZIONE"
     }
   ]
 }
