--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -317,13 +317,13 @@
     },
     {
       "id": 416,
-      "name": "Pacchetto Biglietto Estrazione\n2o Anniversario",
-      "desc": "Un pacchetto per celebrare il 2o Anniversario. Contiene i seguenti articoli:\n\n·  Biglietto per Decaestrazione x5"
+      "name": "Pacchetto Biglietto Estrazione\nSecondo Anniversario",
+      "desc": "Un pacchetto per celebrare il Secondo Anniversario. Contiene i seguenti articoli:\n\n·  Biglietto per Decaestrazione x5"
     },
     {
       "id": 417,
-      "name": "Pacchetto Crescita Identità\n2o Anniversario",
-      "desc": "Un pacchetto per celebrare il 2o Anniversario. Contiene i seguenti articoli:\n\n· Biglietto per Addestramento Identità x125\n· Filo x400"
+      "name": "Pacchetto Crescita Identità\nSecondo Anniversario",
+      "desc": "Un pacchetto per celebrare il Secondo Anniversario. Contiene i seguenti articoli:\n\n· Biglietto per Addestramento Identità x125\n· Filo x400"
     },
     {
       "id": 418,
@@ -342,8 +342,8 @@
     },
     {
       "id": 205,
-      "name": "Pacchetto 2o Anniversario",
-      "desc": "Un pacchetto per celebrare il 2o Anniversario.\n\n· Accesso immediato a Annunciatore: Vergilius\n· 3★ Biglietto per Decaestrazione Garantita x1\n· Biglietto di Lancio Identità ver.2 x1\n\n※ Se hai già ottenuto Vergilius - Annunciatore, ottieni x50 Cassa di Filo.\n※ Il Biglietto di Lancio Identità ver.2 porta il livello di un'Identità al liv. 50, ed il Grado Legame al liv.4."
+      "name": "Pacchetto Secondo Anniversario",
+      "desc": "Un pacchetto per celebrare il Secondo Anniversario.\n\n· Accesso immediato a Annunciatore: Vergilius\n· 3★ Biglietto per Decaestrazione Garantita x1\n· Biglietto di Lancio Identità ver.2 x1\n\n※ Se hai già ottenuto Vergilius - Annunciatore, ottieni x50 Cassa di Filo.\n※ Il Biglietto di Lancio Identità ver.2 porta il livello di un'Identità al liv. 50, ed il Grado Legame al liv.4."
     },
     {
       "id": 421,
