--- a/Italiano/ProjectGS.json
+++ b/Italiano/ProjectGS.json
@@ -434,7 +434,7 @@
     },
     {
       "id": "project_gs_combo_desc_title",
-      "content": "Combinazione Lezioni"
+      "content": "Lezioni Combinate"
     },
     {
       "id": "project_gs_restart",
@@ -482,7 +482,7 @@
     },
     {
       "id": "project_gs_lesson_level_up_title",
-      "content": "Notice"
+      "content": "Avviso"
     },
     {
       "id": "project_gs_notice_unable_to_release_fixed_lesson",
@@ -530,7 +530,7 @@
     },
     {
       "id": "project_gs_growth_desc",
-      "content": "Jia Xichun è miglirata!\n(Zhi : {0}, Yong : {1}, Ren : {2})\nSinclair è migliorato!\n(Zhi : {4}, Yong : {5}, Ren : {6})"
+      "content": "Jia Xichun è migliorata!\n(Zhi : {0}, Yong : {1}, Ren : {2})\nSinclair è migliorato!\n(Zhi : {4}, Yong : {5}, Ren : {6})"
     },
     {
       "id": "project_gs_growth_result_popup_lessons",
@@ -542,7 +542,7 @@
     },
     {
       "id": "project_gs_ask_to_start_lesson_with_warning",
-      "content": "Starting the final Class will overwrite the cultivation history of your last run.\nStart the Class anyway?"
+      "content": "Frequentare l'ultima Lezione sovrascriverà i progressi dell'ultima coltivazione fatta.\nVuoi frequentare lo stesso l'ultima Lezione?"
     },
     {
       "id": "project_gs_alarm_lesson_level_up",
