--- a/Italiano/ProjectGSLessonName.json
+++ b/Italiano/ProjectGSLessonName.json
@@ -2,62 +2,62 @@
   "dataList": [
     {
       "id": 1,
-      "content": "Metaphysical Approach to Ego and the Reflected World",
+      "content": "Approccio Metafisico all'Ego e ai Mondi Riflessi",
       "teacher": "Yi Sang"
     },
     {
       "id": 2,
-      "content": "Understanding of City Engineering and its Practices",
+      "content": "Comprensione dell'Ingenieria della Città e delle sue Prassi",
       "teacher": "Faust"
     },
     {
       "id": 3,
-      "content": "Be Passionate & Dream On! - Fixer Tales",
+      "content": "Appassionati & Sogna! - Storia dei Fixer",
       "teacher": "Don Quixote"
     },
     {
       "id": 4,
-      "content": "Exploring and Overcoming the Unknown: Jianghu Journeys",
+      "content": "Esplora e Supera l'Ignoto: Jianghu Journeys",
       "teacher": "Ishmael"
     },
     {
       "id": 5,
-      "content": "My War Tales",
+      "content": "I Miei Racconti Bellici",
       "teacher": "Gregor"
     },
     {
       "id": 6,
-      "content": "Surviving Hongyuan",
+      "content": "Sopravvivere a Hongyuan",
       "teacher": "Hong Lu"
     },
     {
       "id": 7,
-      "content": "Judgment Containment",
+      "content": "Contenere il Giudizio",
       "teacher": "Meursault"
     },
     {
       "id": 8,
-      "content": "Intelligence Acquisition - Corner Your Enemy",
+      "content": "Ottenimento d'Informazioni - Metti all'Angolo il Tuo Nemico",
       "teacher": "Outis"
     },
     {
       "id": 9,
-      "content": "T.C.O.C. : Taking Care Of Children",
+      "content": "P.C.D.B. : Prendersi Cura Dei Bambini",
       "teacher": "Ryōshū"
     },
     {
       "id": 10,
-      "content": "All About the Poker Face",
+      "content": "L'Arte della Faccia di Bronzo",
       "teacher": "Rodion"
     },
     {
       "id": 11,
-      "content": "Fightin's All About Morale",
+      "content": "La Lotta è Tutta Questione di Morale",
       "teacher": "Heathcliff"
     },
     {
       "id": 12,
-      "content": "『Rambling Tales from the Drunken Palm (酔手野話)』",
+      "content": "『Racconti Sconclusionati di un Ubriacone (酔手野話)』",
       "teacher": "The Night Drifter"
     },
     {
