--- a/Italiano/ProjectGSComboName.json
+++ b/Italiano/ProjectGSComboName.json
@@ -2,23 +2,23 @@
   "dataList": [
     {
       "id": 1,
-      "content": "Taxidermied Geniuses"
+      "content": "Geni Tassidermizzati"
     },
     {
       "id": 2,
-      "content": "Fixer Association Encyclopedia... For Dummies!"
+      "content": "Enciclopedia delle Associazioni dei Fixer... Per Principianti!"
     },
     {
       "id": 3,
-      "content": "The Morning Papers"
+      "content": "Scartoffie Mattutine"
     },
     {
       "id": 4,
-      "content": "9-to-5"
+      "content": "Orario Continuato"
     },
     {
       "id": 5,
-      "content": "Shared Pain"
+      "content": "Dolore Condiviso"
     },
     {
       "id": 6,
@@ -26,23 +26,23 @@
     },
     {
       "id": 7,
-      "content": "Omniscient Artist's Viewpoint"
+      "content": "Punto di Vista dell'Artista Onniscente"
     },
     {
       "id": 8,
-      "content": "What it Needs... is Kindness"
+      "content": "Ha Bisogno... di Gentilezza"
     },
     {
       "id": 9,
-      "content": "The Comedy Duo"
+      "content": "Il Duo Comico"
     },
     {
       "id": 10,
-      "content": "The Good Drill Sergeant & Bad Drill Sergeant Routine"
+      "content": "Poliziotto Buono & Poliziotto Cattivo"
     },
     {
       "id": 11,
-      "content": "Can be Destroyed but not Defeated"
+      "content": "Puoi Distruggerlo, ma non Sconfiggerlo"
     },
     {
       "id": 12,
@@ -54,11 +54,11 @@
     },
     {
       "id": 14,
-      "content": "Family Matters"
+      "content": "La Famiglia è Importante"
     },
     {
       "id": 15,
-      "content": "Courage to Confront"
+      "content": "Il Coraggio di Confrontare"
     },
     {
       "id": 16,
@@ -74,7 +74,7 @@
     },
     {
       "id": 19,
-      "content": "Chains of Command"
+      "content": "Catena di Comando"
     },
     {
       "id": 20,
@@ -82,11 +82,11 @@
     },
     {
       "id": 21,
-      "content": "Enemy of Yesterday, Friend of Today"
+      "content": "Nemico nel Passato, Amico nel Presente"
     },
     {
       "id": 22,
-      "content": "Talking With Swords"
+      "content": "Parlare Con le Spade"
     }
   ]
 }
