--- a/Italiano/reward-popup-text-ProjectGS.json
+++ b/Italiano/reward-popup-text-ProjectGS.json
@@ -2,8 +2,8 @@
   "dataList": [
     {
       "id": "UNIT_LEVEL_UPGRADE",
-      "add": "{0} ha ottenuto {1} Levello/i",
-      "min": "{0} ha perso {1} Levello/i"
+      "add": "{0} ha ottenuto {1} Livello/i",
+      "min": "{0} ha perso {1} Livello/i"
     },
     {
       "id": "MAX_HP_ADD_UPGRADE",
@@ -18,7 +18,7 @@
     {
       "id": "DEF_UPGRADE",
       "add": "{0} ha ottenuto {1} Livello/i Difensivo",
-      "min": "{0} ha perso {1} Livello/i Difensivo""
+      "min": "{0} ha perso {1} Livello/i Difensivo"
     },
     {
       "id": "SPEED_RANGE_UPGRADE",
