--- a/Italiano/kr_settings-ui-donttranslate.json
+++ b/Italiano/kr_settings-ui-donttranslate.json
@@ -106,7 +106,7 @@
     },
     {
       "id": "mainui_settings_ppdesc",
-      "content": "Controls camera effects in battle. Affects game performance."
+      "content": "Controlla gli effetti della telecamera durante il combattimento. Influenza la performance."
     },
     {
       "id": "mainui_settings_antialiasing",
@@ -174,31 +174,31 @@
     },
     {
       "id": "explain_sucession",
-      "content": "If you close the account, all gameplay and purchase data will be deleted."
+      "content": "Se chiudi questo account, tutti i suoi dati di gioco e acquisti verranno cancellati."
     },
     {
       "id": "explain_sucession_remain_days",
-      "content": "You will be given a 7-day grace period. You can restore the account if you sign in before the end of the period."
+      "content": "Ti verrà data una proroga di 7 giorni. Puoi ripristinare l'account se accedi prima che siano passati."
     },
     {
       "id": "explain_writing_code_for_sucession",
-      "content": "※ If you agree to the terms above,\nplease enter the letters you see in the box."
+      "content": "※ Se accetti queste le condizioni,\nsi prega di scrivere le lettere che vedi nel box."
     },
     {
       "id": "explain_secession_status",
-      "content": "The account is currently under a closure period.\nTime Remaining: {0}D {1}H {2}M\nYou can recover the account if you sign in now.\nRecover the account?"
+      "content": "L'account è in un periodo di chiusura.\nTempo Rimanennte: {0}G {1}O {2}M\nPuoi recuperare l'account accedendo.\nRecuperare l'account?"
     },
     {
       "id": "recover",
-      "content": "Recover"
+      "content": "Recupera"
     },
     {
       "id": "request_sucession",
-      "content": "Request Closure"
+      "content": "Richiedi Chiusura"
     },
     {
       "id": "request_sucession_success",
-      "content": "Closure successfully requested."
+      "content": "Chiusura richiesta con successo."
     },
     {
       "id": "mainui_settings_account",
@@ -214,19 +214,19 @@
     },
     {
       "id": "mainui_settings_bloom",
-      "content": "Bloom"
+      "content": "Bagliore"
     },
     {
       "id": "mainui_settings_blur",
-      "content": "Blur"
+      "content": "Sfocatura"
     },
     {
       "id": "mainui_settings_bloomdesc",
-      "content": "Controls spread of light effects. Affects game performance."
+      "content": "Controlla gli effetti di luce. Influenza la performance."
     },
     {
       "id": "mainui_settings_blurdesc",
-      "content": "Controls blur effects. Affects game performance."
+      "content": "Controlla gli effetti di Sfocatura. Influenza la performance."
     },
     {
       "id": "mainui_settings_fps_common",
@@ -238,11 +238,11 @@
     },
     {
       "id": "mainui_settings_renderingscale",
-      "content": "Render Scaling"
+      "content": "Renderizzazione"
     },
     {
       "id": "mainui_settings_renderingscale_warning",
-      "content": "We recommend that you set it to 「High」 on PC. On mobile, 「Medium」 or lower is recommended.\nHigher rendering scale value may lead to increased power drainage and heat."
+      "content": "Si raccomanda di selezionare 「Alta」 sul Computer. Al telefono, si raccomanda 「Media」 o minore.\nUn valore più alto può portare ad un maggior consumo di energia e calore emesso."
     },
     {
       "id": "mainui_settings_colorfilter",
